--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 jobs:
   build-and-testing:
     runs-on: ubuntu-latest
