--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,18 +4,15 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-permissions:
-  contents: write
-  pages: write
-  id-token: write
 jobs:
-  build-and-testing:
+  pipeline:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node_version: [ 17.x ]
+        node-version: [ 17.x ]
+
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -24,8 +21,5 @@ jobs:
         run: npm install
       - name: build production project
         run: npm run build
-        if: always()
       - name: testing
         run: npm run test
-        if: always()
-      
