--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
       - name: build production project
         run: npm run build
       - name: testing
-        run: npm run test
+        run: npm run test:ci
