--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.0.0",
     "@ngrx/effects": "^16.0.0",
     "@ngrx/store": "^16.0.0",
+    "ng-dynamic-component": "^10.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
